# spec-kit

./: .gitignore  LICENSE  README.md  pyproject.toml  spec-driven.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  init.sh  setup-plan.sh  update-agent-context.sh
src/ds_cli/: __init__.py
templates/: agent-file-template.md  checklist-template.md  constitution-laravel.md  constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
templates/commands/: checklist.md  clarify.md  constitution.md  implement.md  init.md  laravel-security-audit.md  plan.md  specify.md  tasks.md
