[project]
name = "ds-toolkit"
version = "0.1.0"
description = "DevSquad Spec-Driven Development Toolkit. Initialize SDD in any project with zero dependencies."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ds = "ds_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ds_cli"]

[tool.hatch.build.targets.wheel.force-include]
"templates/agent-file-template.md" = "ds_cli/pack/templates/agent-file-template.md"
"templates/checklist-template.md" = "ds_cli/pack/templates/checklist-template.md"
"templates/constitution-template.md" = "ds_cli/pack/templates/constitution-template.md"
"templates/plan-template.md" = "ds_cli/pack/templates/plan-template.md"
"templates/spec-template.md" = "ds_cli/pack/templates/spec-template.md"
"templates/tasks-template.md" = "ds_cli/pack/templates/tasks-template.md"
"templates/commands" = "ds_cli/pack/commands"
"scripts/bash" = "ds_cli/pack/scripts/bash"
